[package]
name = "wmidi_apple"
version = "0.1.0"
authors = ["adamnemecek <adamnemecek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#coremidi = "0.4.0"
coremidi = { path = "../coremidi" }

# core-foundation-sys = "0.2"
# core-foundation = "0.2"
# coremidi-sys = "2.0"